k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels: 
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api 
  template: 
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ojaswa1942/ibm-banking-api:latest
        ports:
        - containerPort: 3013
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 3013
      targetPort: 3013
