k8s/mongo.yaml
# This uses an ephemeral volume, which os desired
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels: 
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template: 
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: init-scripts
          mountPath: "/docker-entrypoint-initdb.d/"
        - name: mongo-shared-key-data
          mountPath: "/shared-secrets"
          readOnly: true
        # lifecycle:
        #   postStart:
        #     exec:
        #       command:
        #       - bash
        #       - -c
        #       - cp /shared-secrets/key /data/key; 
        #       - chown mongodb /data/key;
        #       - chmod 400 /data/key
        args: [
          "--replSet", 
          "$MONGO_REPLICA_SET_NAME", 
          "--bind_ip_all", 
          "--keyFile",  
          "/shared-secrets/key",
          "--setParameter",
          "authenticationMechanisms=SCRAM-SHA-1"
        ]
        # livenessProbe:
        #   exec:
        #     command:
        #       - test $$(echo "rs.initiate().ok || rs.status().ok" | mongo -u $${MONGO_INITDB_ROOT_USERNAME} -p $${MONGO_INITDB_ROOT_PASSWORD} --quiet) -eq 1
        #   initialDelaySeconds: 10
        #   periodSeconds: 20

      volumes:
      - name: init-scripts
        configMap:
          name: db-init
      - name: mongo-shared-key-data
        emptyDir: {}
      - name: mongo-shared-key
        secret:
          secretName: mongo-key-secret
          defaultMode: 0400
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo 
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
